                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)

 - 27-12-2005 fixed: music nav, "* All Artists" folder may not always be on top if the list
 - 27-12-2005 fixed: music nav, "* All Songs" folders where missing
 - 26-12-2005 added: custom slideshows in My Pictures via m3u playlists (only images are queued into the slideshow)
 - 26-12-2005 fixed: music nav, the "* All *" items could not be queued to the playlist
 - 26-12-2005 changed: music nav, minor speed improvement of loading all songs from database
 - 26-12-2005 fixed: FileItem attribute CanQueue was not saved or copyed to another object
 - 24-12-2005 fixed: playlist caching
 - 24-12-2005 fixed: list and textbox spincontrols in python
 - 24-12-2005 added: getshares command to HttpApi
 - 24-12-2005 fixed: Musicdatabase upgrade to 1.4 failed if songs from the same album had different thumbid's.
 - 24-12-2005 fixed: [ 1380153 ] DVD playback with subtitles not in sync
 - 23-12-2005 added: workaround for stacking multipart rar sets (ie, filename.partXXX.rar)
 - 23-12-2005 updated: Swedish language file (Thnx to blittan)
 - 23-12-2005 updated: Korean language file (Thnx to AkoXko)
 - 23-12-2005 updated: Italian language file (Thnx to kotix)
 - 23-12-2005 updated: German language file (Thnx to deezle)
 - 23-12-2005 updated: Norwegian language file (Thnx to vnm)
 - 23-12-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 23-12-2005 changed: moved music library into a directory class
                       MusicDatabase will be updated to version 1.4
 - 23-12-2005 changed: moved sorting and available view as controls out of the my music windows